# HBN_SFOS_Cmake

./: CMakeLists.txt  HBNSfosGenerateIcons.cmake  HBNSfosGenerateTranslations.cmake  LICENSE  README.md
